remove jdk.internal from gradle, it's never used